Report page: Fix overflow in sidebar with lots of fuzzers (#375)

--- a/src/fuzz_introspector/styling/styles.css
+++ b/src/fuzz_introspector/styling/styles.css
@@ -91,7 +91,8 @@ table.dataTable tbody tr.even {
 	/*border-right: 1px solid #d9d9d9;*/
 	background:  #EBEDEE;
 	position: fixed;
-	height: 100vh;
+	height: calc(100vh - 70px);
+	overflow-y: auto;
 }
 .content-section {
 	height: calc(100vh - 70px);
